# wilayah-indonesia

./: .gitignore  LICENSE  README.md  build_files.py  manage.py  pyproject.toml  requirements.txt  vercel.json
api/: config.py  loader.py  main.py  routes.py  schemas.py
app/: __init__.py  main.py
app/api/: deps.py  examples.py  router.py
app/api/endpoints/: root.py  search.py  simple.py  wilayah.py
app/core/: config.py  errors.py  http.py  responses.py
app/schemas/: common.py  wilayah.py
app/services/: data_loader.py  simple.py  wilayah.py
apps/api/: renderers.py  serializers.py  urls.py  views.py
apps/wilayah/: admin.py  apps.py  loader.py  models.py
apps/wilayah/data/: kabupaten.json  kecamatan.json
apps/wilayah/management/commands/: add_district.py  add_province.py  add_regency.py  add_village.py  extract_district.py  extract_province.py  extract_regency.py  extract_village.py
apps/wilayah/migrations/: 0001_initial.py
data/: kabupaten.json  kecamatan.json  provinsi.json
prod/: __init__.py  main.py
staticfiles/: site.webmanifest
templates/rest_framework/: api.html
tests/: README.md  __init__.py  test_api.py  test_loader.py  test_schema_contracts.py
wilayah_indonesia/: asgi.py  config.py  settings.py  urls.py  wsgi.py
